ci: release to crates.io; improve evm contracts build process
* ci: rename workflow

* ci: cleanup

* ci: create workflow to release to crates.io

* ci: iterate on crates build

* ci: iterate on crates build

* ci: iterate on crates build

* ci: test removing kit build

* ci: try another approach

* ci: rename token

* ci: move build.rs for evm contracts to evm addon

* ci: bump svm addon version

* try again

* again

* tq

* again

* quiet cargo search

* update crates versions

* update lock

* bump svm crate version

* publish package, not manifest path

* fix

* fix?

* specify addon kit version

* idk

* idk

* idk

* idk

* idk

* idk

* idk

* idk

* cleanup

* oops

* attempt evm crate

* fix kit import to all crates

* install foundry

* move evm contracts build to different output directory

* idk

* fix

* evm cargo metadata

* test release build fix

--- a/.github/workflows/release_cli.yaml
+++ b/.github/workflows/release_cli.yaml
@@ -1,9 +1,9 @@
-name: Build Binaries
+name: Build & Release CLI Binaries
 on:
   push:
     branches:
       - main
-      - fix/release-build
+      - ci/release
   workflow_dispatch:
 
 concurrency:
@@ -130,7 +130,6 @@ jobs:
         run: rustup toolchain install 1.79 --profile minimal --target ${{ matrix.target }}
 
       - name: Install Rust Target
-        if: matrix.os != 'ubuntu-20.04'
         run: rustup target add ${{ matrix.target }}
 
       # env vars unix
@@ -270,7 +269,6 @@ jobs:
           bucket-root: /
           public: true
 
-  
   homebrew:
     name: Update Homebrew
     runs-on: ubuntu-latest
