--- a/crates/txtx-core/Cargo.toml
+++ b/crates/txtx-core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "txtx-core"
 description = "Primitives for parsing, analyzing and executing Txtx runbooks"
-version = { workspace = true }
+version = "0.2.3"
 edition = { workspace = true }
 license = { workspace = true }
 repository = { workspace = true }
@@ -13,7 +13,7 @@ daggy = "0.8.0"
 base64 = "0.22.1"
 bs58 = "0.5.1"
 # txtx-addon-kit = { version = "0.2.2", default-features = false }
-txtx-addon-kit = { workspace = true, default-features = false}
+txtx-addon-kit = { workspace = true, default-features = false }
 getrandom = { version = "0.2", features = ["js"] }
 lazy_static = "1.4.0"
 jaq-interpret = "1.2.1"
