--- a/addons/evm/Cargo.toml
+++ b/addons/evm/Cargo.toml
@@ -1,11 +1,16 @@
 [package]
 name = "txtx-addon-network-evm"
+description = "Primitives for executing EVM runbooks"
 version = "0.1.0"
-edition = "2021"
+edition = { workspace = true }
+license = "Apache-2.0"
+repository = { workspace = true }
+keywords = { workspace = true }
+categories = { workspace = true }
 
 [dependencies]
 sha2 = "0.10.8"
-txtx-addon-kit = { workspace = true, default-features = false}
+txtx-addon-kit = { workspace = true, default-features = false }
 lazy_static = "1.4.0"
 hmac = "0.12.0"
 pbkdf2 = { version = "0.12.2", features = ["simple"], default-features = false }
