feat(cli): update JSON output handling to support directory paths and improve output file naming

--- a/crates/txtx-cli/Cargo.toml
+++ b/crates/txtx-cli/Cargo.toml
@@ -62,6 +62,7 @@ dirs = "5.0.1"
 graphql_client = "0.14.0"
 serde_urlencoded = "0.7.1"
 base64 = "0.22.1"
+chrono = "0.4.38"
 
 [features]
 default = ["cli"]
