--- a/addons/svm/Cargo.toml
+++ b/addons/svm/Cargo.toml
@@ -25,6 +25,7 @@ anchor-lang-idl = { version = "0.1.2", features = ["convert"] }
 solana_idl = "0.2.0"
 borsh = "1.5.1"
 tiny-bip39 = "0.8.2"
+convert_case = "0.6.0"
 
 [dev-dependencies]
 txtx-test-utils = { path = "../../crates/txtx-test-utils" }
