--- a/crates/txtx-addon-kit/Cargo.toml
+++ b/crates/txtx-addon-kit/Cargo.toml
@@ -16,7 +16,7 @@ serde = "1"
 serde_derive = "1"
 jaq-interpret = "1.2.1"
 url = { version = "2.2.2", features = ["serde"] }
-uuid = { version = "=1.7.0", features = ["v4", "serde"] }
+uuid = { version = "1.15.1", features = ["v4", "serde"] }
 getrandom = { version = "0.2", features = ["js"] }
 hex = "0.4.3"
 reqwest = { version = "0.12.5", default-features = false, features = [
