--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "crates/txtx-addon-kit",
     "crates/txtx-lsp",
     "crates/txtx-supervisor-ui",
+    "crates/txtx-serve",
     "addons/bitcoin",
     "addons/evm",
     "addons/ovm",
@@ -29,6 +30,7 @@ txtx-addon-kit = { path = "crates/txtx-addon-kit", default-features = false }
 txtx-core = { path = "crates/txtx-core", default-features = false }
 txtx-gql = { path = "crates/txtx-gql" }
 txtx-supervisor-ui = { path = "crates/txtx-supervisor-ui" }
+txtx-serve = { path = "crates/txtx-serve" }
 txtx-addon-network-evm = { path = "addons/evm" }
 txtx-addon-network-ovm = { path = "addons/ovm" }
 txtx-addon-network-bitcoin = { path = "addons/bitcoin" }
