ci: add path to local action

--- a/.github/workflows/release_crates.yaml
+++ b/.github/workflows/release_crates.yaml
@@ -24,7 +24,7 @@ jobs:
           path: txtx-supervisor-ui 
 
       - name: Build .env file for Supervisor UI
-        uses: ./.github/actions/setup_supervisor_env
+        uses: ./txtx/.github/actions/setup_supervisor_env
         with:
           txtx_dev_npm_read_token: ${{ secrets.TXTX_DEV_NPM_READ_TOKEN }}
           nhost_region: ${{ secrets.NHOST_REGION }}
