ci(crates): add env vars for txtx build

--- a/.github/workflows/release_crates.yaml
+++ b/.github/workflows/release_crates.yaml
@@ -16,6 +16,14 @@ jobs:
         with:
           path: txtx
 
+      - name: Build .env file
+        uses: ./txtx/.github/actions/setup_env
+        with:
+          infura_api_key: ${{ secrets.INFURA_API_KEY }}
+          nhost_region: ${{ secrets.NHOST_REGION }}
+          nhost_subdomain: ${{ secrets.NHOST_SUBDOMAIN }}
+          working_directory: "txtx"
+
       - name: Checkout Supervisor UI
         uses: actions/checkout@v4
         with:
