--- a/.github/actions/setup_env/action.yml
+++ b/.github/actions/setup_env/action.yml
@@ -11,18 +11,21 @@ inputs:
   nhost_subdomain:
     description: 'The nhost subdomain'
     required: true
+  working_directory:
+    description: 'Optional working directory where .env should be created'
+    required: false
+    default: '.'
     
 runs:
   using: 'composite'
   steps:
     - run: |
-        touch .env
-        echo RELAYER_BASE_URL="https://txtx.link" >> .env
-        echo RELAYER_HOST="txtx.link" >> .env
-        echo INFURA_API_KEY="${{ inputs.INFURA_API_KEY }}" >> .env
-        echo AUTH_SERVICE_URL="https://id.txtx.run" >> .env
-        echo NHOST_REGION="${{ inputs.NHOST_REGION }}" >> .env
-        echo NHOST_SUBDOMAIN="${{ inputs.NHOST_SUBDOMAIN }}" >> .env
-        echo TXTX_CONSOLE_URL="https://txtx.run" >> .env
-        cat .env
+        touch "${{ inputs.working_directory }}/.env"
+        echo RELAYER_BASE_URL="https://txtx.link" >> "${{ inputs.working_directory }}/.env"
+        echo RELAYER_HOST="txtx.link" >> "${{ inputs.working_directory }}/.env"
+        echo INFURA_API_KEY="${{ inputs.INFURA_API_KEY }}" >> "${{ inputs.working_directory }}/.env"
+        echo AUTH_SERVICE_URL="https://id.txtx.run" >> "${{ inputs.working_directory }}/.env"
+        echo NHOST_REGION="${{ inputs.NHOST_REGION }}" >> "${{ inputs.working_directory }}/.env"
+        echo NHOST_SUBDOMAIN="${{ inputs.NHOST_SUBDOMAIN }}" >> "${{ inputs.working_directory }}/.env"
+        echo TXTX_CONSOLE_URL="https://txtx.run" >> "${{ inputs.working_directory }}/.env"
       shell: bash
