--- a/crates/txtx-serve/Cargo.toml
+++ b/crates/txtx-serve/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "txtx-serve"
-version = { workspace = true }
+description = "Crate for serving a txtx runbook"
+version = "0.1.0"
 edition = { workspace = true }
 license = { workspace = true }
 repository = { workspace = true }
