--- a/crates/txtx-supervisor-ui/Cargo.toml
+++ b/crates/txtx-supervisor-ui/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "txtx-supervisor-ui"
 description = "Crate for starting the txtx supervisor UI"
-version = { workspace = true }
+version = "0.1.0"
 edition = { workspace = true }
 license = { workspace = true }
 repository = { workspace = true }
