--- a/addons/svm/types/Cargo.toml
+++ b/addons/svm/types/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "txtx-addon-network-svm-types"
+description = "Types for executing Solana runbooks"
 version = "0.1.0"
-edition = "2021"
+edition = { workspace = true }
+license = "Apache-2.0"
+repository = { workspace = true }
+keywords = { workspace = true }
+categories = { workspace = true }
 
 [dependencies]
 solana-pubkey = { version = "2.2.1", features = ["serde"]}
@@ -16,6 +21,7 @@ solana-transaction = { version = "2.2.1", features = ["serde", "bincode"]}
 solana-transaction-error = { version = "2.2.1", features = ["serde"]}
 anchor-lang-idl = { version = "0.1.2", features = ["convert"] }
 txtx-addon-kit = { workspace = true, default-features = false }
+# txtx-addon-kit = { version = "0.2.6" }
 lazy_static = "1.4.0"
 serde = "1"
 serde_json = "1"
