--- a/crates/txtx-supervisor-ui/Cargo.toml
+++ b/crates/txtx-supervisor-ui/Cargo.toml
@@ -34,6 +34,9 @@ totp-rs = "^5.0"
 npm_rs="1.0.0"
 
 [features]
+default = ["release"]
+release = []
+debug = []
 
 [lib]
 crate-type = ["lib", "cdylib"] 
