--- a/crates/txtx-cli/Cargo.toml
+++ b/crates/txtx-cli/Cargo.toml
@@ -58,7 +58,7 @@ actix-web = "4"
 actix-cors = "0.7.0"
 
 [features]
-default = ["cli", "supervisor_ui"]
+default = ["cli"]
 cli = ["clap", "clap_generate", "toml", "ctrlc", "hiro-system-kit/log"]
 supervisor_ui = ["txtx-supervisor-ui"]
 txtx_serve = ["txtx-serve"]
