--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -55,13 +55,38 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          path: txtx
 
       - name: Build .env file
-        uses: ./.github/actions/setup_env
+        uses: ./txtx/.github/actions/setup_env
         with:
           infura_api_key: ${{ secrets.INFURA_API_KEY }}
           nhost_region: ${{ secrets.NHOST_REGION }}
           nhost_subdomain: ${{ secrets.NHOST_SUBDOMAIN }}
+          working_directory: "txtx"
+          
+      - name: Checkout Supervisor UI
+        uses: actions/checkout@v4
+        with:
+          repository: txtx/txtx-supervisor-ui
+          token: ${{ secrets.TXTX_ACCESS_TOKEN }} 
+          path: txtx-supervisor-ui 
+
+      - name: Build .env file for Supervisor UI
+        uses: ./txtx/.github/actions/setup_supervisor_env
+        with:
+          txtx_dev_npm_read_token: ${{ secrets.TXTX_DEV_NPM_READ_TOKEN }}
+          nhost_region: ${{ secrets.NHOST_REGION }}
+          nhost_subdomain: ${{ secrets.NHOST_SUBDOMAIN }}
+          working_directory: "txtx-supervisor-ui"
+
+      - name: Build Supervisor UI
+        run: |
+          cd txtx-supervisor-ui
+          npm run i
+          npm run build
+          cd ..
 
       - name: Install Rust toolchain
         run: |
@@ -81,7 +106,7 @@ jobs:
           key: ${{ runner.os }}-rust-${{ env.RUST_VERSION_HASH }}-cargo-${{ hashFiles('./Cargo.lock', './crates/txtx-cli/build.rs', 'addons/evm/src/contracts/**') }}
 
       - name: Build Project
-        run: cargo build --workspace --exclude txtx-addon-network-stacks --release
+        run: cargo build --manifest-path ./txtx/Cargo.toml --workspace --exclude txtx-addon-network-stacks --release
 
       - name: Run Tests
-        run: cargo test --workspace --exclude txtx-addon-network-stacks 
+        run: cargo test --manifest-path ./txtx/Cargo.toml --workspace --exclude txtx-addon-network-stacks
