--- a/crates/txtx-cli/Cargo.toml
+++ b/crates/txtx-cli/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/main.rs"
 [dependencies]
 txtx-core = { workspace = true }
 txtx-supervisor-ui = { workspace = true, optional = true }
+txtx-cloud = { workspace = true }
 txtx-serve = { workspace = true, optional = true }
 txtx-addon-network-svm = { workspace = true }
 txtx-addon-network-stacks = { workspace = true, optional = true }
@@ -26,7 +27,6 @@ txtx-gql = { workspace = true }
 hiro-system-kit = "0.3.1"
 clap = { version = "4.4.6", features = ["derive"], optional = true }
 clap_generate = { version = "3.0.3", optional = true }
-toml = { version = "0.8.2", features = ["preserve_order"], optional = true }
 ctrlc = { version = "3.2.2", optional = true }
 serde = "1"
 serde_json = "1"
@@ -39,7 +39,6 @@ unicode-width = "0.2.0"
 ansi_term = "0.12.1"
 atty = "0.2.14"
 tokio = "1.37.0"
-dotenvy_macro = "0.15.7"
 openssl = { version = "*", features = ["vendored"] }
 openssl-sys = { version = "*", features = ["vendored"] }
 dialoguer = "0.11.0"
@@ -48,18 +47,12 @@ convert_case = "0.6.0"
 rusqlite = "0.31.0"
 txtx-lsp = { path = "../txtx-lsp" }
 tower-lsp = { version = "0.20.0" }
-open = "5.3.1"
-dirs = "5.0.1"
-graphql_client = "0.14.0"
-serde_urlencoded = "0.7.1"
-base64 = "0.22.1"
 chrono = "0.4.38"
 actix-web = "4"
-actix-cors = "0.7.0"
 
 [features]
 default = ["cli"]
-cli = ["clap", "clap_generate", "toml", "ctrlc", "hiro-system-kit/log"]
+cli = ["clap", "clap_generate", "ctrlc", "hiro-system-kit/log"]
 supervisor_ui = ["txtx-supervisor-ui"]
 txtx_serve = ["txtx-serve"]
 debug = ["hiro-system-kit/debug"]
