--- a/.github/workflows/release_cli.yaml
+++ b/.github/workflows/release_cli.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-      - rearrange-crates
+      - ci/windows
   workflow_dispatch:
 
 concurrency:
@@ -57,10 +57,10 @@ jobs:
             platform: linux
             target: x86_64-unknown-linux-gnu
             architecture: x64
-          # - os: windows-latest
-          #   platform: windows
-          #   target: x86_64-pc-windows-msvc
-          #   architecture: x64
+          - os: windows-latest
+            platform: windows
+            target: x86_64-pc-windows-msvc
+            architecture: x64
           - os: macos-latest
             platform: darwin
             target: x86_64-apple-darwin
