chore(ci): install dotenv-cli globally in release workflow

--- a/.github/workflows/release_cli.yaml
+++ b/.github/workflows/release_cli.yaml
@@ -111,6 +111,7 @@ jobs:
       - name: Build Supervisor UI
         run: |
           cd txtx-supervisor-ui
+          npm i -g dotenv-cli
           npm run i
           npm run build
           cd ..
