fix(cli/ci): fix Windows support and build Windows binaries in CI
* wip

* fix: evm build script

* fix: build evm

* fix: build evm

* fix: supervisor build

* fix: supervisor build

* ci: enable windows build

* chore(ci): install dotenv-cli globally in release workflow

* chore(ci): add dotenv-cli installation step for Windows in release workflow

* ci: add artifact renaming and upload steps for Windows build

* ci: update artifact renaming step to use matrix target for Windows build

* ci: fix artifact renaming path for Windows build

* ci: add debug logs for artifact renaming step in Windows build

* ci: update artifact renaming path in release workflow for consistency

* ci: add directory listing for target in release workflow

* ci: update Windows artifact handling to compress and upload as tar.gz

* ci: simplify directory listing command in release workflow for Windows

* ci: update directory path for artifact compression in release workflow

* ci: remove logging

---------

Co-authored-by: Ludo Galabru <ludo@txtx.builders>

--- a/.github/workflows/release_cli.yaml
+++ b/.github/workflows/release_cli.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-      - rearrange-crates
+      - ci/windows
   workflow_dispatch:
 
 concurrency:
@@ -57,10 +57,10 @@ jobs:
             platform: linux
             target: x86_64-unknown-linux-gnu
             architecture: x64
-          # - os: windows-latest
-          #   platform: windows
-          #   target: x86_64-pc-windows-msvc
-          #   architecture: x64
+          - os: windows-latest
+            platform: windows
+            target: x86_64-pc-windows-msvc
+            architecture: x64
           - os: macos-latest
             platform: darwin
             target: x86_64-apple-darwin
@@ -107,6 +107,14 @@ jobs:
           nhost_region: ${{ secrets.NHOST_REGION }}
           nhost_subdomain: ${{ secrets.NHOST_SUBDOMAIN }}
           working_directory: "txtx-supervisor-ui"
+
+      # install supervisor dependencies (windows)
+      - name: "Install dotenv-cli (windows)"
+        if: matrix.os == 'windows-latest'
+        run: |
+          cd txtx-supervisor-ui
+          npm i -g dotenv-cli
+          cd ..
 
       - name: Build Supervisor UI
         run: |
@@ -167,6 +175,12 @@ jobs:
         if: matrix.os != 'windows-latest'
         run: tar -C txtx/target/${{ matrix.target }}/release -zcvf txtx-${{ env.SHORT_TARGET_NAME }}.tar.gz txtx
 
+      - name: Compress artifact (Windows)
+        if: matrix.os == 'windows-latest'
+        shell: bash
+        run:
+          tar -czf txtx-${{ env.SHORT_TARGET_NAME }}.tar.gz -C txtx/target/${{ matrix.target }}/release txtx.exe
+
       - name: Store SHA256 Hash of Tar (Linux x64)
         if: matrix.os == 'ubuntu-20.04'
         id: linux_x64_sha
@@ -193,6 +207,12 @@ jobs:
           name: txtx-${{ env.SHORT_TARGET_NAME }}
           path: txtx-${{ env.SHORT_TARGET_NAME }}.tar.gz
 
+      - name: Upload tar archive (Windows)
+        if: matrix.os == 'windows-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: txtx-${{ env.SHORT_TARGET_NAME }}
+          path: txtx-${{ env.SHORT_TARGET_NAME }}.tar.gz
   release:
     name: Release
     runs-on: ubuntu-latest
