feat(evm): allow verifying contracts on deployment
* fix(core): `eq` operator fix

* fix(evm): allow key/url for block_explorer_opts

* fix(core): implement `!=` operator fn

* chore(kit): helper type to initialize Value::object

* chore(kit): FileLocation helper to get absolute path

* chore(evm): add get full foundry config when getting deployment artifacts

* chore(evm): clean up parsing deployment artifacts

* feat(evm): allow verifying standard-json contract

* chore(cli): add purple progress output color

* feat(evm): allow setting multiple explorer verification sources

* fix(evm): display correct explorer url after verification

* chore(cli): update cli progress formatting

* fix(evm): allow non-erroring verification of contracts

* fix(core): object evaluation fix

* chore(kit): add from method to create CommandExecutionResult from default values

* refactor(kit): enhance from method to accept generic iterator for ObjectType

* fix(cli): log progress_tx diags

* feat(evm): contract verification

* fix(evm): fix constructor arg encoding for contract verification

* fix(evm): add throw_on_error option for contract verification

* fix(core): fix addon block evaluation to handle map types

* fix(evm): improve constructor argument encoding in contract verification

* fix(evm): propagate errors in contract verification status updates

* fix(evm): update Etherscan client to handle optional provider URLs and improve address URL retrieval

* fix(evm): change contract verification error handling to break on failure

* fix(evm): update error message for Sourcify verification response parsing

* chore(core): skip doc tests

* chore(core): fix doc test

* docs(evm): verification docs

* docs: update generated docs

* chore(release): publish v0.2.12

--- a/addons/evm/Cargo.toml
+++ b/addons/evm/Cargo.toml
@@ -20,14 +20,17 @@ serde_json = { version = "1.0.113", features = ["arbitrary_precision"] }
 serde = "1"
 serde_derive = "1"
 async-recursion = "1"
-alloy = { version = "0.12", features = ["full", "rlp", "eip712"] }
-alloy-provider = { version = "0.12", features = ["debug-api"] }
-alloy-rpc-types = { version = "0.12", features = ["trace"] }
-alloy-signer-local = { version = "0.12", features = ["mnemonic"] }
+alloy = { version = "0.13", features = ["full", "rlp", "eip712"] }
+alloy-provider = { version = "0.13", features = ["debug-api"] }
+alloy-rpc-types = { version = "0.13", features = ["trace"] }
+alloy-signer-local = { version = "0.13", features = ["mnemonic"] }
 thiserror = "1.0.62"
 toml = "0.5"
-foundry-block-explorers = "0.11.0"
-alloy-chains = "0.1.23"
+foundry-block-explorers = "0.12.0"
+foundry-compilers-artifacts-solc = "0.13.5"
+alloy-chains = "0.1.27"
+foundry-config = "0.2.0"
+semver = "1.0.26"
 
 [features]
 default = ["txtx-addon-kit/default"]
