--- a/crates/txtx-cli/Cargo.toml
+++ b/crates/txtx-cli/Cargo.toml
@@ -28,6 +28,7 @@ hiro-system-kit = "0.3.1"
 clap = { version = "4.4.6", features = ["derive"], optional = true }
 clap_generate = { version = "3.0.3", optional = true }
 ctrlc = { version = "3.2.2", optional = true }
+dotenvy = "0.15.7"
 serde = "1"
 serde_json = "1"
 serde_derive = "1"
