--- a/crates/txtx-cloud/Cargo.toml
+++ b/crates/txtx-cloud/Cargo.toml
@@ -22,9 +22,9 @@ clap = { version = "4.4.6", features = ["derive"], optional = true }
 clap_generate = { version = "3.0.3", optional = true }
 dialoguer = "0.11.0"
 dirs = "5.0.1"
-dotenvy = "0.15.7"
 graphql_client = "0.14.0"
 hiro-system-kit = "0.3.1"
+jsonwebtoken = "9.3.1"
 open = "5.3.1"
 serde = "1"
 serde_json = "1"
