fix: auth url, cargo fmt
# Conflicts:
#	addons/evm/src/commands/actions/check_confirmations.rs
#	addons/sp1/src/commands/actions/create_proof.rs
#	addons/stacks/src/commands/actions/broadcast_transaction.rs
#	addons/svm/core/src/commands/deploy_program.rs
#	addons/svm/core/src/commands/process_instructions.rs

--- a/.github/actions/setup_env/action.yml
+++ b/.github/actions/setup_env/action.yml
@@ -24,7 +24,7 @@ runs:
         echo RELAYER_BASE_URL="https://txtx.link" >> "${{ inputs.working_directory }}/.env"
         echo RELAYER_HOST="txtx.link" >> "${{ inputs.working_directory }}/.env"
         echo INFURA_API_KEY="${{ inputs.INFURA_API_KEY }}" >> "${{ inputs.working_directory }}/.env"
-        echo AUTH_SERVICE_URL="https://id.txtx.run" >> "${{ inputs.working_directory }}/.env"
+        echo AUTH_SERVICE_URL="https://id.txtx.run/v1" >> "${{ inputs.working_directory }}/.env"
         echo NHOST_REGION="${{ inputs.NHOST_REGION }}" >> "${{ inputs.working_directory }}/.env"
         echo NHOST_SUBDOMAIN="${{ inputs.NHOST_SUBDOMAIN }}" >> "${{ inputs.working_directory }}/.env"
         echo TXTX_CONSOLE_URL="https://txtx.run" >> "${{ inputs.working_directory }}/.env"
