--- a/addons/svm/core/Cargo.toml
+++ b/addons/svm/core/Cargo.toml
@@ -22,6 +22,7 @@ solana-sdk = "2.2.1"
 solana-client = "2.2.1"
 spl-associated-token-account = "6.0.0"
 spl-token = "7.0.0"
+spl-token-2022 = "7.0.0"
 solana_idl = "0.2.0"
 borsh = "1.5.1"
 tiny-bip39 = "0.8.2"
