--- a/addons/evm/Cargo.toml
+++ b/addons/evm/Cargo.toml
@@ -20,10 +20,23 @@ serde_json = { version = "1.0.113", features = ["arbitrary_precision"] }
 serde = "1"
 serde_derive = "1"
 async-recursion = "1"
-alloy = { version = "0.14", features = ["full", "rlp", "eip712"] }
+alloy = { version = "0.14", default-features = false, features = [
+  "consensus", 
+  "dyn-abi", 
+  "json-abi", 
+  "network", 
+  "rpc", 
+  "signers", 
+  "rpc-types", 
+  "contract", 
+  "providers", 
+  "rlp", 
+  "reqwest-rustls-tls",
+  "eip712"
+]}
 alloy-chains = "0.1"
 alloy-primitives = { version = "0.8" }
-alloy-provider = { version = "0.14", features = ["debug-api"] }
+alloy-provider = { version = "0.14", default-features = false, features = ["debug-api"] }
 alloy-rpc-types = { version = "0.14", features = ["trace"] }
 alloy-signer-local = { version = "0.14", features = ["mnemonic"] }
 thiserror = "1.0.62"
