--- a/crates/txtx-serve/Cargo.toml
+++ b/crates/txtx-serve/Cargo.toml
@@ -31,12 +31,11 @@ include_dir = "0.7.4"
 juniper_actix = {version = "0.5.0", features = ["subscriptions"] }
 juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"] }
 mime_guess = "2.0.4"
-native-tls = "0.2.11"
 serde = "1"
 serde_json = "1"
 serde_derive = "1"
 tokio = "1.37.0"
-tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
+tokio-tungstenite = { version = "0.23.1", features = ["rustls"] }
 totp-rs = "^5.0"
 
 [build-dependencies]
