feat: iterate on cloud auth (#267)
* feat(cloud): update environment configuration and JWT handling for authentication

- Updated `.template.env` with new service URLs and ports.
- Bumped `jsonwebtoken` dependency to version 9.3.1.
- Added JWT management functionality in `jwt.rs` for decoding and validation.
- Refactored authentication logic in `login.rs` to utilize JWT for session management.
- Enhanced `GqlClient` to handle token expiration and refresh logic.
- Removed deprecated `auth.rs` and integrated its functionality into the new structure.

* chore(core/wasm-build): add type annotations

* feat(kit/cloud): add interface/functions to allow commands to interact with cloud svcs

* chore(evm/stacks/svm): update command specs to handle new cloud svc fields

* chore(auth): add refresh_session_if_needed method to streamline token refresh logic

* chore(publish): rename txtx_cloud_url to txtx_console_url for consistency

* chore(cli): implement TxtxEnv struct and load function for environment variable management

* feat(core/cli): initialize cloud service contexts and propagate through runbook execution

* feat(runbook): add static analysis to ensure cloud svc eligibility before execution

* feat(svm): implement deploy_subgraph through cloud service

* fix: auth url, cargo fmt

* fix: auth url, cargo fmt

# Conflicts:
#	addons/evm/src/commands/actions/check_confirmations.rs
#	addons/sp1/src/commands/actions/create_proof.rs
#	addons/stacks/src/commands/actions/broadcast_transaction.rs
#	addons/svm/core/src/commands/deploy_program.rs
#	addons/svm/core/src/commands/process_instructions.rs

* fix: merge artifact

* chore: cascade changes

* chore: deps cleaning

* chore: cascade changes

---------

Co-authored-by: MicaiahReid <micaiahreid@gmail.com>

--- a/.template.env
+++ b/.template.env
@@ -1,6 +1,7 @@
-RELAYER_BASE_URL="http://127.0.0.1:8489"
-RELAYER_HOST="127.0.0.1:8489"
-AUTH_SERVICE_URL="https://id.txtx.run/"
-TXTX_CONSOLE_URL=""
-NHOST_REGION=""
-NHOST_SUBDOMAIN=""
+RELAYER_BASE_URL="https://txtx.link"
+RELAYER_HOST="txtx.link"
+AUTH_SERVICE_URL="https://auth.txtx.run"
+AUTH_CALLBACK_PORT=8488
+TXTX_CONSOLE_URL="https://txtx.run"
+TXTX_ID_SERVICE_URL="https://id.txtx.run/v1"
+REGISTRY_GQL_URL="https://registry.txtx.run/v1/graphql"
