--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ default-members = ["crates/txtx-cli"]
 resolver = "2"
 
 [workspace.dependencies]
+crossbeam-channel = "0.5.15"
 reqwest = { version = "0.11.27", default-features = false, features = [
     "json",
     "rustls-tls",
