--- a/crates/txtx-supervisor-ui/Cargo.toml
+++ b/crates/txtx-supervisor-ui/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "txtx-supervisor-ui"
 description = "Crate for starting the txtx supervisor UI"
-version = "0.1.4"
+version = "0.1.5"
 edition = { workspace = true }
 license = { workspace = true }
 repository = { workspace = true }
@@ -36,6 +36,7 @@ npm_rs="1.0.0"
 default = ["bin_build"]
 crates_build = []
 bin_build = []
+bypass_supervisor_build = []
 
 [lib]
 crate-type = ["lib", "cdylib"] 
