--- a/addons/svm/core/Cargo.toml
+++ b/addons/svm/core/Cargo.toml
@@ -19,6 +19,7 @@ serde_derive = "1"
 async-recursion = "1"
 bincode = "1.3.3"
 solana-sdk = "2.2.1"
+solana-message = { version = "2.2.1", features = ["serde"] }
 solana-client = "2.2.1"
 spl-associated-token-account = "6.0.0"
 spl-token = "7.0.0"
