--- a/addons/svm/core/Cargo.toml
+++ b/addons/svm/core/Cargo.toml
@@ -18,19 +18,19 @@ serde = "1"
 serde_derive = "1"
 async-recursion = "1"
 bincode = "1.3.3"
-solana-sdk = { version = "2.2.1", features = ["borsh"] }
+solana-sdk = { version = "2.2.1" }
 solana-client = "2.2.1"
 spl-associated-token-account = "6.0.0"
 spl-token = "7.0.0"
 spl-token-2022 = "7.0.0"
 solana_idl = "0.2.0"
-borsh = "1.5.1"
+borsh_1_5_1 = { version = "1.5.1", package = "borsh" }
 tiny-bip39 = "0.8.2"
 convert_case = "0.6.0"
 # Solana Record Service Dependencies
 solana-record-service-sdk = { path = "../../../../solana-record-service/sdk/rust" }
 # srs is using an old version of borsh, so we need to use the same version
-borsh_0_10 = { version = "0.10.4", package = "borsh" }
+borsh = { version = "0.10", package = "borsh", features = ["std"] }
 kaigan = "0.2.6"
 
 [dev-dependencies]
