--- a/addons/evm/Cargo.toml
+++ b/addons/evm/Cargo.toml
@@ -12,6 +12,8 @@ categories = { workspace = true }
 sha2 = "0.10.8"
 txtx-addon-kit = { workspace = true, default-features = false }
 lazy_static = "1.4.0"
+error-stack = { version = "0.5", default-features = false }
+tokio = { version = "1", features = ["rt", "macros"] }
 hmac = "0.12.0"
 pbkdf2 = { version = "0.12.2", features = ["simple"], default-features = false }
 tiny-hderive = { version = "0.3.0" }
