--- a/crates/txtx-addon-kit/Cargo.toml
+++ b/crates/txtx-addon-kit/Cargo.toml
@@ -38,6 +38,7 @@ libsecp256k1 = { version = "0.7.0" }
 keccak-hash = "0.11.0"
 dirs = "5.0.1"
 dyn-clone = "1"
+error-stack = { version = "0.5", default-features = false }
 
 [dev-dependencies]
 test-case = "3.3"
