feat(cli): migrate CLI error handling to error-stack
- Add CliError enum with common CLI error scenarios
- Create rich attachments (ManifestInfo, RunbookContext, OutputInfo, etc.)
- Implement enhanced error display with recovery suggestions
- Add migration examples showing before/after patterns
- Create working demo showing improved error messages

Common errors now provide:
- Clear context about what failed
- Available alternatives (e.g., valid runbooks)
- Actionable recovery steps
- Links to documentation
- Graceful fallbacks for output failures

This migration demonstrates how error-stack dramatically improves
the user experience by transforming cryptic errors into helpful guidance.

--- a/crates/txtx-cli/Cargo.toml
+++ b/crates/txtx-cli/Cargo.toml
@@ -25,6 +25,7 @@ txtx-addon-telegram = { workspace = true }
 txtx-addon-sp1 = { workspace = true, optional = true }
 txtx-gql = { workspace = true }
 hiro-system-kit = "0.3.1"
+error-stack = { version = "0.5", default-features = false }
 clap = { version = "4.4.6", features = ["derive"], optional = true }
 clap_generate = { version = "3.0.3", optional = true }
 ctrlc = { version = "3.2.2", optional = true }
