--- a/addons/svm/types/Cargo.toml
+++ b/addons/svm/types/Cargo.toml
@@ -9,6 +9,7 @@ keywords = { workspace = true }
 categories = { workspace = true }
 
 [dependencies]
+convert_case = "0.6.0"
 solana-pubkey = { version = "2.2.1", features = ["serde"]}
 solana-transaction-context = { version = "2.2.1", features = ["serde"]}
 solana-clock = { version = "2.2.1", features = ["serde"]}
