--- a/addons/svm/types/Cargo.toml
+++ b/addons/svm/types/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "txtx-addon-network-svm-types"
 description = "Types for executing Solana runbooks"
-version = "0.1.22"
+version = "0.2.0"
 edition = { workspace = true }
 license = "Apache-2.0"
 repository = { workspace = true }
@@ -9,6 +9,7 @@ keywords = { workspace = true }
 categories = { workspace = true }
 
 [dependencies]
+convert_case = "0.6.0"
 solana-pubkey = { version = "2.2.1", features = ["serde"]}
 solana-transaction-context = { version = "2.2.1", features = ["serde"]}
 solana-clock = { version = "2.2.1", features = ["serde"]}
@@ -26,3 +27,6 @@ lazy_static = "1.4.0"
 serde = "1"
 serde_json = "1"
 serde_derive = "1"
+
+[dev-dependencies]
+test-case = "3.3"
