move chain data evaluation logic for subgraphs to txtx

--- a/addons/svm/types/Cargo.toml
+++ b/addons/svm/types/Cargo.toml
@@ -9,6 +9,7 @@ keywords = { workspace = true }
 categories = { workspace = true }
 
 [dependencies]
+borsh = "1.5.1"
 convert_case = "0.6.0"
 solana-pubkey = { version = "2.2.1", features = ["serde"]}
 solana-transaction-context = { version = "2.2.1", features = ["serde"]}
@@ -20,6 +21,7 @@ solana-keypair = { version = "2.2.1" }
 solana-signature = { version = "2.2.1", features = ["serde"]}
 solana-transaction = { version = "2.2.1", features = ["serde", "bincode"]}
 solana-transaction-error = { version = "2.2.1", features = ["serde"]}
+solana-transaction-status-client-types = { version = "2.2.1" }
 anchor-lang-idl = { version = "0.1.2", features = ["convert"] }
 txtx-addon-kit = { workspace = true, default-features = false }
 # txtx-addon-kit = { version = "0.2.6" }
